--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /build/vs2015/*
-/build/vs2015/jin.sln
-/build/vs2015/jin.vcxproj
-/build/vs2015/jin.vcxproj.filters
+!/build/vs2015/jin.sln
+!/build/vs2015/jin.vcxproj
+!/build/vs2015/jin.vcxproj.filters
 /build/vs2015/.vs/*
 /deps/* 
 !/deps/DEPS
